# ChaosTranslate

./: .gitignore  .gitmodules  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AppSelectDialog.cpp  AppSelectDialog.h  ApplicationWatcher.cpp  ApplicationWatcher.h  CMakeLists.txt  ChaosTranslate.aps  ChaosTranslate.cpp  ChaosTranslate.h  ChaosTranslate.qrc  ChaosTranslate.rc  ChaosTranslate.ui  Constants.h  Glossary.cpp  Glossary.h  Glossary.ui  GlossaryDialog.cpp  GlossaryDialog.h  GlossaryDialog.ui  GlossaryManager.cpp  GlossaryManager.h  GlossaryModel.cpp  GlossaryModel.h  InvisibleCanvas.cpp  InvisibleCanvas.h  LanguageMapping.h  NewGlossaryDialog.h  QColorPicker.cpp  QColorPicker.h  README.md  RealTimeTranslator.cpp  RealTimeTranslator.h  RealTimeTranslator.qrc  RealTimeTranslator.ui  SelectionCanvas.cpp  SelectionCanvas.h  (+11 more)
Glossary/: GlossaryDialog.cpp  GlossaryDialog.h  GlossaryDialog.ui  GlossaryManager.cpp  GlossaryManager.h  GlossaryModel.cpp  GlossaryModel.h  NewGlossary.ui  NewGlossaryDialog.cpp  NewGlossaryDialog.h
Resources/Translation/: chaostranslate_zh.qm  chaostranslate_zh.ts  realtimetranslator_en.qm  realtimetranslator_en.ts
src/: AppSelectDialog.cpp  AppSelectDialog.h  ApplicationWatcher.cpp  ApplicationWatcher.h  ChaosTranslate.cpp  ChaosTranslate.h  ChaosTranslate.qrc  ChaosTranslate.ui  CharacterRecognize.cpp  CharacterRecognize.h  Constants.h  LanguageManager.cpp  LanguageManager.h  QColorPicker.h  SelectApp.ui  SelectionCanvas.cpp  SettingManager.cpp  SettingManager.h  resource.h
src/Glossary/: GlossaryDialog.cpp  GlossaryDialog.h  GlossaryManager.cpp  GlossaryManager.h  GlossaryModel.h  NewGlossary.ui
src/Resources/Translation/: chaostranslate_en.qm  chaostranslate_en.ts  chaostranslate_zh.qm  chaostranslate_zh.ts
